--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "dead-server --port=3002 --host=localhost",
+    "dev": "dead-server --port=3000 --host=localhost",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "Andrius",
-  "license": "MIT",
-  "devDependencies": {
-    "dead-server": "^1.0.6"
-  }
+  "license": "MIT"
 }
